--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="project-item">
-          <a href="word_game.html" class="d-block">
+          <a href="wordle/word_game.html" class="d-block">
             <img src="resources/word_game.png" alt="Word Games" class="img-fluid project-image">
             <h5 class="mt-3 mb-0 text-center text-uppercase font-weight-bold text-success" style="font-family: 'Pacifico', cursive;">Wordle game</h5>
           </a>
@@ -159,7 +159,7 @@
       </div>
       <div class="col-md-4">
         <div class="project-item">
-          <a href="tic_tac_toe.html" class="d-block">
+          <a href="Tick-tak-toe/tic_tac_toe.html" class="d-block">
             <img src="resources/tic-tac-toe.jpg" alt="tic tic-tac-toe" class="img-fluid project-image">
             <h5 class="mt-3 mb-0 text-center text-uppercase font-weight-bold text-primary" style="font-family: 'Roboto', cursive;">Tic-tac-toe</h5>
           </a>
@@ -167,7 +167,7 @@
       </div>
       <div class="col-md-4">
         <div class="project-item">
-          <a href="image_processing_tool.html" class="d-block">
+          <a href="Photoalbum/image_processing_tool.html" class="d-block">
             <img src="resources/image_processing.jpg" alt="Image Processing Tool" class="img-fluid project-image">
             <h5 class="mt-3 mb-0 text-center text-uppercase font-weight-bold text-warning" style="font-family: 'Caveat', cursive;">Image Processing Tool</h5>
           </a>
