--- a/index.html
+++ b/index.html
@@ -114,9 +114,6 @@
         <li class="nav-item">
           <h5><a class="nav-link" href="#portfolio">Project</a></h5>
         </li>
-        <li class="nav-item">
-          <h5><a class="nav-link" href="#contact">Contact</a></h5>
-        </li>
       </ul>
     </div>
   </div>
@@ -131,7 +128,7 @@
       <source src="resource/vegeta-ultra-ego.1920x1080.mp4" type="video/mp4">
     </video>
     <h1>Welcome to My Profile</h1>
-    <p>This is the home section.</p>
+    <p>This is Avanthika Viswanathan</p>
   </div>
 </section>
 
@@ -161,15 +158,6 @@
         </div>
       </div>
     </div>
-  </div>
-</section>
-
-
-
-<section id="contact" class="bg-secondary text-white">
-  <div class="container">
-    <h1>Contact Me</h1>
-    <p>This is the contact section.</p>
   </div>
 </section>
 
