--- a/index.html
+++ b/index.html
@@ -119,14 +119,8 @@
   </div>
 </nav>
 
-<section id="home">
-  <video autoplay loop muted class="video-background">
-    <source src="resources/portfolio bg.mp4" type="video/mp4">
-  </video>
+<section id="home" class="bg-dark text-white">
   <div class="container">
-    <video autoplay loop muted plays-inline class="background-clip">
-      <source src="resource/vegeta-ultra-ego.1920x1080.mp4" type="video/mp4">
-    </video>
     <h1>Welcome to My Profile</h1>
     <p>This is Avanthika Viswanathan</p>
   </div>
